--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "openai": "^4.67.1",
     "passport": "^0.7.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
